Created the home app and set up templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
   {% endblock %}
 
   <!-- Additional JS -->
-  {% additional_js %}
+  {% block additional_js %}
   {% endblock %}
 
   <!-- Page Title -->
