--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,5 +1,5 @@
 html {
-    height: 100%;
+    height: 100vh;
 }
 
 body {
@@ -16,6 +16,10 @@ header {
 
 footer {
     background-color: #000;
+}
+
+footer i {
+    font-size: 1.5rem;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -74,6 +78,10 @@ hr {
     font-size: 0.7rem;
 }
 
+footer a i:hover {
+    color: #545454;
+}
+
 /* Utility */
 .hover-gray {
     background-color: #545454;
@@ -105,7 +113,7 @@ hr {
 
 /* XXL Screen Size */
 @media (min-width: 1440px) {
-    #footer-menus {
+    #footer-menus, #site-info {
         width: 80%;
     }
 }
