--- a/templates/base.html
+++ b/templates/base.html
@@ -196,7 +196,7 @@
   {% endblock %}
 
   <!-- Fixed, full-width footer -->
-  <footer class="container-fluid text-white">
+  <footer class="container-fluid fixed-bottom text-white">
     <!-- Logo -->
     <div class="container-fluid" id="newsletter-container">
       <div class="row justify-content-center mt-4" id="footer-logo-container">
@@ -218,7 +218,9 @@
         </form>
       </div>
     </div>
+
     <hr class="bg-white my-0">
+
     <div class="container-fluid d-flex justify-content-between" id="footer-menus">
       <div class="row"></div>
         <!-- Footer Nav -->
@@ -340,7 +342,44 @@
         </div>
       </div>
     </div>
+
+    <div class="container-fluid align-content-center" id="site-info">
+      <div class="row d-flex justify-content-between">
+        <div class="col-6 col-lg-2 align-content-center py-3">
+          <div class="w-100">
+            <span class="mr-1"><i class="fa-brands fa-cc-mastercard"></i></span>
+            <span class="mr-1"><i class="fa-brands fa-cc-visa"></i></span>
+            <span class="mr-1"><i class="fa-brands fa-cc-amex"></i></span>
+            <span><i class="fa-brands fa-cc-discover"></i></span>
+          </div>
+          <div class="w-100">
+            <span class="mr-1"><i class="fa-brands fa-cc-diners-club"></i></span>
+            <span class="mr-1"><i class="fa-brands fa-cc-jcb"></i></span>
+            <span class="mr-1"><i class="fa-brands fa-cc-stripe"></i></span>
+            <span><i class="fa-solid fa-credit-card"></i></span>
+          </div>
+        </div>
+        <div class="col-lg-8 d-none d-lg-block text-center align-content-center py-3">
+          <p class="text-uppercase m-0">&copy;<span id="copyright-year"></span> Alchemy Aleworks - Designed by <a href="https://github.com/eddy-bryan">Eddy Bryan</a></p>
+        </div>
+        <div class="col-6 col-lg-2 text-right align-content-center py-3">
+          <a class="mr-3 text-white" href="https://www.facebook.com/"><i class="fa-brands fa-square-facebook"></i></a>
+          <a class="mr-3 text-white" href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+          <a class="text-white" href="https://x.com/"><i class="fa-brands fa-twitter"></i></a>
+        </div>
+      </div>
+      <div class="row d-flex d-lg-none justify-content-center text-center">
+        <p class="text-uppercase">&copy;<span id="copyright-year"></span> Alchemy Aleworks - Designed by <a href="https://github.com/eddy-bryan">Eddy Bryan</a></p>
+      </div>
+    </div>
   </footer>
+
+  <script>
+    // Get the current year
+    var currentYear = new Date().getFullYear();
+    // Update the element with id "copyright-year"
+    document.getElementById("copyright-year").textContent = currentYear;
+  </script>
 
   <!-- Additional JavaScript loaded after page content -->
   {% block end_js %}
