--- a/templates/base.html
+++ b/templates/base.html
@@ -201,11 +201,12 @@
     {% endblock %}
   </main>
 
-  <!-- Fixed, full-width footer -->
-  <footer class="container-fluid fixed-bottom text-white">
-    <!-- Logo -->
+  <!-- Full-width footer -->
+  <footer class="container-fluid text-white">
+    <!-- Newsletter -->
     <div class="container-fluid" id="newsletter-container">
       <div class="row justify-content-center mt-4" id="footer-logo-container">
+        <!-- Logo -->
         <img class="h-100" src="{% static 'images/logos/alchemy-aleworks-white-symbol-only.png' %}"
           alt="Alchemy Aleworks White Symbol Logo">
       </div>
