--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -17,24 +17,24 @@
     <h3 class="mb-3">Limited Edition Brews</h3>
     <hr class="bg-black my-0">
     <div class="d-flex justify-content-center my-3">
-      <div class="card border-0 align-items-center mx-4">
-        <div class="card-img-top border-black bg-white my-2" style="width: 200px; height: 200px;"></div>
+      <div class="card border-0 align-items-center mr-2 mx-sm-4">
+        <div class="card-img-top border-black bg-white my-2" style="width: 100%; height: 200px;"></div>
         <!-- <img src="..." class="card-img-top border-black my-2" alt="..."> -->
         <div class="card-body py-0">
           <h5 class="card-title my-0">Beer Name</h5>
           <p class="card-text">Type of Beer / ?.?%</p>
         </div>
       </div>
-      <div class="card border-0 align-items-center mx-4">
-        <div class="card-img-top border-black bg-white my-2" style="width: 200px; height: 200px;"></div>
+      <div class="card border-0 align-items-center ml-2 mx-sm-4">
+        <div class="card-img-top border-black bg-white my-2" style="width: 100%; height: 200px;"></div>
         <!-- <img src="..." class="card-img-top border-black my-2" alt="..."> -->
         <div class="card-body py-0">
           <h5 class="card-title my-0">Beer Name</h5>
           <p class="card-text">Type of Beer / ?.?%</p>
         </div>
       </div>
-      <div class="card border-0 align-items-center mx-4">
-        <div class="card-img-top border-black bg-white my-2" style="width: 200px; height: 200px;"></div>
+      <div class="d-none d-lg-block card border-0 align-items-center mx-sm-4">
+        <div class="card-img-top border-black bg-white my-2" style="width: 100%; height: 200px;"></div>
         <!-- <img src="..." class="card-img-top border-black my-2" alt="..."> -->
         <div class="card-body py-0">
           <h5 class="card-title my-0">Beer Name</h5>
