--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -46,5 +46,15 @@
   </div>
 </div>
 
+<div class="d-flex justify-content-center overflow-hidden position-relative height-fit-content" id="taproom-section">
+  <img src="/static/images/taproom/taproom1.jpg" alt="Taproom Image 1" class="h-100 d-none d-lg-inline-block col-lg-4 mx-0 px-0 taproom-image">
+  <img src="/static/images/taproom/taproom2.jpg" alt="Taproom Image 2" class="h-100 d-inline-block col-6 col-lg-4 mx-0 px-0 taproom-image">
+  <img src="/static/images/taproom/taproom3.jpg" alt="Taproom Image 3" class="h-100 d-inline-block col-6 col-lg-4 mx-0 px-0 taproom-image">
+  <div class="overlay position-absolute h-100 w-100"></div>
+  <div class="position-absolute text-center text-white text-uppercase col-12 col-lg-6" id="taproom-content">
+    <h3 class="mb-4"><a href="#" class="hover-gray text-white">Visit Our Taproom</a></h3>
+  </div>
+</div>
+
 <div class="bg-dark" style="height: 100px;"></div>
 {% endblock %}
