--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -47,12 +47,29 @@
 </div>
 
 <div class="d-flex justify-content-center overflow-hidden position-relative height-fit-content" id="taproom-section">
-  <img src="/static/images/taproom/taproom1.jpg" alt="Taproom Image 1" class="h-100 d-none d-lg-inline-block col-lg-4 mx-0 px-0 taproom-image">
-  <img src="/static/images/taproom/taproom2.jpg" alt="Taproom Image 2" class="h-100 d-inline-block col-6 col-lg-4 mx-0 px-0 taproom-image">
-  <img src="/static/images/taproom/taproom3.jpg" alt="Taproom Image 3" class="h-100 d-inline-block col-6 col-lg-4 mx-0 px-0 taproom-image">
+  <img src="/static/images/taproom/taproom1.jpg" alt="Taproom Image 1"
+    class="h-100 d-none d-lg-inline-block col-lg-4 mx-0 px-0 taproom-image">
+  <img src="/static/images/taproom/taproom2.jpg" alt="Taproom Image 2"
+    class="h-100 d-inline-block col-6 col-lg-4 mx-0 px-0 taproom-image">
+  <img src="/static/images/taproom/taproom3.jpg" alt="Taproom Image 3"
+    class="h-100 d-inline-block col-6 col-lg-4 mx-0 px-0 taproom-image">
   <div class="overlay position-absolute h-100 w-100"></div>
   <div class="position-absolute text-center text-white text-uppercase col-12 col-lg-6" id="taproom-content">
     <h3 class="mb-4"><a href="#" class="hover-gray text-white">Visit Our Taproom</a></h3>
+  </div>
+</div>
+
+<div class="overflow-hidden position-relative py-4 col-12 col-lg-8 col-xl-6 offset-lg-2 offset-xl-3" id="our-story-section">
+  <div class="text-center col-12" id="our-story-content">
+    <h3 class="mb-3 text-uppercase">Our Story</h3>
+    <hr class="bg-black my-0">
+    <div class="d-flex justify-content-center mt-3">
+      <p class="my-0">
+        Embark on the journey of Alchemist Aleworks, where the magic of brewing began in the humble confines of our
+        founder's garage. From these modest beginnings, we've honed our craft, blending ancient alchemical wisdom with
+        modern brewing techniques to create elixirs that captivate the senses and enchant the soul.
+      </p>
+    </div>
   </div>
 </div>
 
