--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -73,5 +73,36 @@
   </div>
 </div>
 
+<div class="overflow-hidden position-relative py-4 bg-gray" id="merchandise-section">
+  <div class="text-center text-uppercase col-12" id="merchandise-content">
+    <h3 class="mb-3">Our Merchandise</h3>
+    <hr class="bg-black my-0">
+    <div class="d-flex justify-content-center my-3">
+      <div class="card border-0 align-items-center mr-2 mx-sm-4 bg-gray">
+        <div class="card-img-top border-black bg-white my-2" style="width: 100%; height: 200px;"></div>
+        <!-- <img src="..." class="card-img-top border-black my-2" alt="..."> -->
+        <div class="card-body py-0">
+          <h5 class="card-title my-0">Merch Item Name</h5>
+        </div>
+      </div>
+      <div class="card border-0 align-items-center ml-2 mx-sm-4 bg-gray">
+        <div class="card-img-top border-black bg-white my-2" style="width: 100%; height: 200px;"></div>
+        <!-- <img src="..." class="card-img-top border-black my-2" alt="..."> -->
+        <div class="card-body py-0">
+          <h5 class="card-title my-0">Merch Item Name</h5>
+        </div>
+      </div>
+      <div class="d-none d-lg-block card border-0 align-items-center mx-sm-4 bg-gray">
+        <div class="card-img-top border-black bg-white my-2" style="width: 100%; height: 200px;"></div>
+        <!-- <img src="..." class="card-img-top border-black my-2" alt="..."> -->
+        <div class="card-body py-0">
+          <h5 class="card-title my-0">Merch Item Name</h5>
+        </div>
+      </div>
+    </div>
+    <a class="btn-gray" href="#">Shop Now</a>
+  </div>
+</div>
+
 <div class="bg-dark" style="height: 100px;"></div>
 {% endblock %}
