--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -104,5 +104,5 @@
   </div>
 </div>
 
-<div class="bg-dark" style="height: 100px;"></div>
+<!-- <div class="bg-dark" style="height: 100px;"></div> -->
 {% endblock %}
