--- a/templates/base.html
+++ b/templates/base.html
@@ -205,7 +205,7 @@
   <footer class="container-fluid text-white">
     <!-- Newsletter -->
     <div class="container-fluid" id="newsletter-container">
-      <div class="row justify-content-center mt-4" id="footer-logo-container">
+      <div class="row justify-content-center pt-4" id="footer-logo-container">
         <!-- Logo -->
         <img class="h-100" src="{% static 'images/logos/alchemy-aleworks-white-symbol-only.png' %}"
           alt="Alchemy Aleworks White Symbol Logo">
@@ -232,7 +232,7 @@
 
     <div class="container-fluid d-flex justify-content-between" id="footer-menus">
       <!-- Footer Nav -->
-      <div class="col-6 col-lg-4 my-4 p-0 d-flex justify-content-center" id="footer-nav">
+      <div class="col-6 col-lg-4 mt-5 p-0 d-flex justify-content-center" id="footer-nav">
         <div class="container width-fit-content">
           <div class="footer-heading">
             <img id="footer-nav-logo" src="{% static 'images/logos/alchemy-aleworks-white-text-only.png' %}"
@@ -269,7 +269,7 @@
       </div>
 
       <!-- Contact Us (Large Screen Sizes) -->
-      <div class="col-4 my-4 p-0 d-none d-lg-flex justify-content-center" id="contact-us">
+      <div class="col-4 mt-5 p-0 d-none d-lg-flex justify-content-center" id="contact-us">
         <div class="container width-fit-content">
           <div class="footer-heading">
             <h4 class="text-uppercase">Contact Us</h4>
@@ -296,7 +296,7 @@
       </div>
 
       <!-- Policies -->
-      <div class="col-6 col-lg-4 my-4 p-0 d-flex justify-content-center" id="policies">
+      <div class="col-6 col-lg-4 mt-5 p-0 d-flex justify-content-center" id="policies">
         <div class="container width-fit-content">
           <div class="footer-heading">
             <h4 class="text-uppercase">Policies</h4>
@@ -324,7 +324,7 @@
 
     <!-- Contact Us -->
     <div class="row">
-      <div class="col-12 my-4 p-0 d-flex d-lg-none justify-content-center text-center" id="contact-us">
+      <div class="col-12 mt-4 p-0 d-flex d-lg-none justify-content-center text-center" id="contact-us">
         <div class="container width-fit-content">
           <div class="footer-heading">
             <h4 class="text-uppercase">Contact Us</h4>
@@ -351,7 +351,7 @@
       </div>
     </div>
 
-    <div class="container-fluid align-content-center" id="site-info">
+    <div class="container-fluid align-content-center mt-4" id="site-info">
       <div class="row d-flex justify-content-between">
         <!-- Payment Types -->
         <div class="col-6 col-lg-2 align-content-center py-3">
