Created and linked up beers template to the beer model

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -7,7 +7,7 @@
   <div class="overlay position-absolute h-100 w-100"></div>
   <div class="position-absolute text-center text-white text-uppercase col-12 col-lg-6" id="hero-content">
     <h1 class="mb-4">Alchemy in every sip, elixir for every soul</h1>
-    <a class="btn-gray" href="#">Shop Beers</a>
+    <a class="btn-gray" href="{% url 'beers' %}">Shop Beers</a>
     <a class="btn-gray" href="#">Shop Merch</a>
   </div>
 </div>
@@ -103,6 +103,4 @@
     <a class="btn-gray" href="#">Shop Now</a>
   </div>
 </div>
-
-<!-- <div class="bg-dark" style="height: 100px;"></div> -->
 {% endblock %}
