Changed project name, repository name and all subsequent occurences within the project to correct name

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -65,7 +65,7 @@
     <hr class="bg-black my-0">
     <div class="d-flex justify-content-center mt-3">
       <p class="my-0">
-        Embark on the journey of Alchemist Aleworks, where the magic of brewing began in the humble confines of our
+        Embark on the journey of Alchemy Aleworks, where the magic of brewing began in the humble confines of our
         founder's garage. From these modest beginnings, we've honed our craft, blending ancient alchemical wisdom with
         modern brewing techniques to create elixirs that captivate the senses and enchant the soul.
       </p>
