--- a/templates/base.html
+++ b/templates/base.html
@@ -56,7 +56,7 @@
   {% endblock %}
 
   <!-- Page Title -->
-  <title>Alchemist Aleworks {% block extended_title %}{% endblock %}</title>
+  <title>Alchemy Aleworks {% block extended_title %}{% endblock %}</title>
 </head>
 
 <body>
