--- a/templates/base.html
+++ b/templates/base.html
@@ -83,10 +83,10 @@
         <a class="text-black text-uppercase nav-link" href="{% url 'home' %}">
           Home
         </a>
-        <a class="text-black text-uppercase nav-link" href="#">
+        <a class="text-black text-uppercase nav-link" href="{% url 'beers' %}">
           Beers
         </a>
-        <a class="text-black text-uppercase nav-link" href="#">
+        <a class="text-black text-uppercase nav-link" href="{% url 'merch' %}">
           Merch
         </a>
         <a class="text-black text-uppercase nav-link" href="#">
@@ -171,7 +171,7 @@
             </a>
           </li>
           <li class="list-inline-item p-0 m-0">
-            <a class="text-black text-uppercase nav-link" href="#">
+            <a class="text-black text-uppercase nav-link" href="{% url 'merch' %}">
               <span class="{% if request.path == '/inventory/merch/' %}active{% endif %}">Merch</span>
             </a>
           </li>
@@ -245,12 +245,12 @@
               </a>
             </li>
             <li class="p-0 m-0">
-              <a class="text-uppercase text-white" href="#">
+              <a class="text-uppercase text-white" href="{% url 'beers' %}">
                 Beer
               </a>
             </li>
             <li class="p-0 m-0">
-              <a class="text-uppercase text-white" href="#">
+              <a class="text-uppercase text-white" href="{% url 'merch' %}">
                 Merch
               </a>
             </li>
