--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -17,30 +17,15 @@
     <h3 class="mb-3">Limited Edition Brews</h3>
     <hr class="bg-black my-0">
     <div class="d-flex justify-content-center my-3">
-      <div class="card border-0 align-items-center mr-2 mx-sm-4">
-        <div class="card-img-top border-black bg-white my-2" style="width: 100%; height: 200px;"></div>
-        <!-- <img src="..." class="card-img-top border-black my-2" alt="..."> -->
-        <div class="card-body py-0">
-          <h5 class="card-title my-0">Beer Name</h5>
-          <p class="card-text">Type of Beer / ?.?%</p>
+      {% for beer in limited_edition_beers %}
+      <div class="{% if forloop.counter > 2 %}d-none d-lg-block{% endif %} card border-0 align-items-center mx-1 mx-sm-4">
+        <img src="{{ beer.image.url }}" class="card-img-top border-black my-2" alt="{{ beer.name }}" style="max-width: 265px; height: auto;">
+        <div class="card-body py-2">
+          <h5 class="card-title my-0">{{ beer.name }}</h5>
+          <p class="card-text">{{ beer.type }} / {{ beer.alcohol_content }}%</p>
         </div>
       </div>
-      <div class="card border-0 align-items-center ml-2 mx-sm-4">
-        <div class="card-img-top border-black bg-white my-2" style="width: 100%; height: 200px;"></div>
-        <!-- <img src="..." class="card-img-top border-black my-2" alt="..."> -->
-        <div class="card-body py-0">
-          <h5 class="card-title my-0">Beer Name</h5>
-          <p class="card-text">Type of Beer / ?.?%</p>
-        </div>
-      </div>
-      <div class="d-none d-lg-block card border-0 align-items-center mx-sm-4">
-        <div class="card-img-top border-black bg-white my-2" style="width: 100%; height: 200px;"></div>
-        <!-- <img src="..." class="card-img-top border-black my-2" alt="..."> -->
-        <div class="card-body py-0">
-          <h5 class="card-title my-0">Beer Name</h5>
-          <p class="card-text">Type of Beer / ?.?%</p>
-        </div>
-      </div>
+      {% endfor %}
     </div>
     <a class="btn-gray" href="{% url 'beers' %}">Shop Now</a>
   </div>
